# retdec

./: .clang-tidy  ANALYSIS_SUMMARY.md  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  COMPILER_SIGNATURE_ANALYSIS.md  CONTRIBUTING.md  DEPENDENCY_ANALYSIS.md  MODERNIZATION_ROADMAP.md  MODERNIZATION_SUMMARY.md  QUICK_WINS_CHECKLIST.md  README.md  SECURITY.md  UPGRADING.md  WORKFLOW_VALIDATION_REPORT.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: code-quality.yml  codeql.yml  coverage.yml  retdec-ci.yml  retdec-release.yml  static-analysis.yml
cmake/: deps.cmake
docs/: LLVM_FORK_STRATEGY.md  PHASE_2_TESTING_CHECKLIST.md  SUPPORT_PACKAGE_QUICK_START.md  SUPPORT_PACKAGE_REBUILD_RESEARCH.md  SUPPORT_PACKAGE_UPDATE_REPORT.md  TEST_SUITE_ANALYSIS.md
src/capstone2llvmir/arm64/: arm64_init.cpp
src/fileinfo/: CMakeLists.txt
src/retdec-decompiler/: CMakeLists.txt
src/stacofintool/: CMakeLists.txt
src/unpackertool/: CMakeLists.txt
support/types/: cstdlib.json  linux.json
support/yara_patterns/: ATTRIBUTION.md
support/yara_patterns/tools/: anomaly_detection.yar
support/yara_patterns/tools/pe/: imphash_detection.yar  modern_packers.yar
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  README.md  test_architecture_support.cpp  test_basic_decompilation.cpp
