
cond_add_subdirectory(common RETDEC_ENABLE_COMMON_TESTS)
cond_add_subdirectory(bin2llvmir RETDEC_ENABLE_BIN2LLVMIR_TESTS)
cond_add_subdirectory(capstone2llvmir RETDEC_ENABLE_CAPSTONE2LLVMIR_TESTS)
cond_add_subdirectory(config RETDEC_ENABLE_CONFIG_TESTS)
cond_add_subdirectory(ctypes RETDEC_ENABLE_CTYPES_TESTS)
cond_add_subdirectory(ctypesparser RETDEC_ENABLE_CTYPESPARSER_TESTS)
cond_add_subdirectory(demangler RETDEC_ENABLE_DEMANGLER_TESTS)
cond_add_subdirectory(fileformat RETDEC_ENABLE_FILEFORMAT_TESTS)
cond_add_subdirectory(llvmir-emul RETDEC_ENABLE_LLVMIR_EMUL_TESTS)
cond_add_subdirectory(llvmir2hll RETDEC_ENABLE_LLVMIR2HLL_TESTS)
cond_add_subdirectory(loader RETDEC_ENABLE_LOADER_TESTS)
cond_add_subdirectory(serdes RETDEC_ENABLE_SERDES_TESTS)
cond_add_subdirectory(unpacker RETDEC_ENABLE_UNPACKER_TESTS)
cond_add_subdirectory(utils RETDEC_ENABLE_UTILS_TESTS)

# Integration tests (end-to-end testing)
if(RETDEC_TESTS)
    add_subdirectory(integration)
endif()

# Register tests with CTest (GoogleTest executables)
if(RETDEC_TESTS)
	# Register unit tests with CTest for automatic discovery
	if(RETDEC_ENABLE_COMMON_TESTS AND TARGET tests-common)
		add_test(NAME retdec-tests-common COMMAND retdec-tests-common)
	endif()
	if(RETDEC_ENABLE_BIN2LLVMIR_TESTS AND TARGET tests-bin2llvmir)
		add_test(NAME retdec-tests-bin2llvmir COMMAND retdec-tests-bin2llvmir)
	endif()
	if(RETDEC_ENABLE_CAPSTONE2LLVMIR_TESTS AND TARGET tests-capstone2llvmir)
		add_test(NAME retdec-tests-capstone2llvmir COMMAND retdec-tests-capstone2llvmir)
	endif()
	if(RETDEC_ENABLE_CONFIG_TESTS AND TARGET tests-config)
		add_test(NAME retdec-tests-config COMMAND retdec-tests-config)
	endif()
	if(RETDEC_ENABLE_CTYPES_TESTS AND TARGET tests-ctypes)
		add_test(NAME retdec-tests-ctypes COMMAND retdec-tests-ctypes)
	endif()
	if(RETDEC_ENABLE_CTYPESPARSER_TESTS AND TARGET tests-ctypesparser)
		add_test(NAME retdec-tests-ctypesparser COMMAND retdec-tests-ctypesparser)
	endif()
	if(RETDEC_ENABLE_DEMANGLER_TESTS AND TARGET tests-demangler)
		add_test(NAME retdec-tests-demangler COMMAND retdec-tests-demangler)
	endif()
	if(RETDEC_ENABLE_FILEFORMAT_TESTS AND TARGET tests-fileformat)
		add_test(NAME retdec-tests-fileformat COMMAND retdec-tests-fileformat)
	endif()
	if(RETDEC_ENABLE_LLVMIR2HLL_TESTS AND TARGET tests-llvmir2hll)
		add_test(NAME retdec-tests-llvmir2hll COMMAND retdec-tests-llvmir2hll)
	endif()
	if(RETDEC_ENABLE_LOADER_TESTS AND TARGET tests-loader)
		add_test(NAME retdec-tests-loader COMMAND retdec-tests-loader)
	endif()
	if(RETDEC_ENABLE_SERDES_TESTS AND TARGET tests-serdes)
		add_test(NAME retdec-tests-serdes COMMAND retdec-tests-serdes)
	endif()
	if(RETDEC_ENABLE_UNPACKER_TESTS AND TARGET tests-unpacker)
		add_test(NAME retdec-tests-unpacker COMMAND retdec-tests-unpacker)
	endif()
	if(RETDEC_ENABLE_UTILS_TESTS AND TARGET tests-utils)
		add_test(NAME retdec-tests-utils COMMAND retdec-tests-utils)
	endif()
	if(TARGET retdec-integration-tests)
		add_test(NAME retdec-integration-tests COMMAND retdec-integration-tests)
	endif()
endif()
